pagination, product list, cms, color vars added

--- a/_dev/sass/global/common.scss
+++ b/_dev/sass/global/common.scss
@@ -59,7 +59,14 @@ h5 {
 }
 
 p {
-	font: normal 1rem/1.2 $ff-main, cursive;
+	margin: 0;
+	padding-bottom: 15px;
+	font: normal 0.875rem/1.4 $ff-main, cursive;
+}
+
+strong {
+	font-weight: normal;
+	font-family: $ff-main-bold;
 }
 
 a {
@@ -74,6 +81,7 @@ ul {
 
 li {
 	font: normal 0.875rem/1.5 $ff-main-light;
+	padding-bottom: 10px;
 }
 
 .main-heading {
