--- a/_dev/sass/main.scss
+++ b/_dev/sass/main.scss
@@ -36,3 +36,5 @@
 @import "sections/category-card.scss";
 @import "sections/comments.scss";
 @import "sections/authentication.scss";
+@import "sections/pagination.scss";
+@import "sections/cms.scss";
