--- a/_dev/templates/password-recovery.pug
+++ b/_dev/templates/password-recovery.pug
@@ -1,14 +1,24 @@
-include sections/header
+doctype html
+html(lang="ru")
+  head
+    meta(charset="utf-8")
+    meta(http-equiv="X-UA-Compatible", content="IE=edge")
+    meta(name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no")
+    title Rizdvo
+    link(rel="stylesheet" href="css/main.min.css")
+  body
 
-main.password-recovery
-    .container
-        form.authentication__form(action="/password-recovery" method="post" class="std" id="form_forgotpassword")
-            p.authentication__subheading Забыли пароль?
-            p.authentication__text Введите, пожалуйста, электронный адрес, использованный вами при регистрации. На&nbsp;него будет выслан ваш новый пароль.
-            label.authentication__label(for="email") E-mail
-            input.authentication__input(type="email" id="email" name="email" value="" placeholder="Введите ваш E-mail")
-            button.btn.btn--green.btn--centered.btn--auth(type="submit" id="SubmitCreate" name="SubmitCreate")
-                i.fa.fa-lock(aria-hidden="true")
-                | Восстановить пароль
+    include sections/header
 
-include sections/footer
+    main.password-recovery
+        .container
+            form.authentication__form(action="/password-recovery" method="post" class="std" id="form_forgotpassword")
+                p.authentication__subheading Забыли пароль?
+                p.authentication__text Введите, пожалуйста, электронный адрес, использованный вами при регистрации. На&nbsp;него будет выслан ваш новый пароль.
+                label.authentication__label(for="email") E-mail
+                input.authentication__input(type="email" id="email" name="email" value="" placeholder="Введите ваш E-mail")
+                button.btn.btn--green.btn--centered.btn--auth(type="submit" id="SubmitCreate" name="SubmitCreate")
+                    i.fa.fa-lock(aria-hidden="true")
+                    | Восстановить пароль
+
+    include sections/footer
