--- a/_dev/templates/sections/homepage-slider.pug
+++ b/_dev/templates/sections/homepage-slider.pug
@@ -1,8 +1,6 @@
 .homepage-slider
-    ul.homepage-slider__list
-        li.homepage-slider__item
-            a.homepage-slider__link(href="")
-                img(src="https://rizdvo.com.ua/modules/homeslider/images/a4705212150d7378760193171677dfbaff993598_slide_4.jpg", alt="")
-        //- li.homepage-slider__item
-        //-     a.homepage-slider__link(href="")
-        //-         img(src="https://rizdvo.com.ua/modules/homeslider/images/618c24cfa5ce8e61fdf6a8fb6072758e1f48f29e_slide_1.jpg", alt="")
+    .container
+        ul.homepage-slider__list
+            li.homepage-slider__item
+                a.homepage-slider__link(href="")
+                    img(src="https://rizdvo.com.ua/modules/homeslider/images/a4705212150d7378760193171677dfbaff993598_slide_4.jpg", alt="")
