--- a/_dev/templates/sections/product-card.pug
+++ b/_dev/templates/sections/product-card.pug
@@ -6,8 +6,11 @@
     .product-card__rating
     .product-card__prices
         .product-card__price.product-card__price--current 860 Грн.
+        .product-card__price.product-card__price--old 1000 Грн.
     .product-card__add-to-cart
         button.btn.btn--centered.btn--red В корзину
+    p.product-card__label.product-card__label--stock
+        span Акция!
     .product-card__features
         ul.product-card__features-list
             li.product-card__features-item
