--- a/_dev/sass/sections/advantages.scss
+++ b/_dev/sass/sections/advantages.scss
@@ -18,7 +18,7 @@
 		display: block;
 		height: 100%;
 		padding: 20px 15px;
-		border: 2px solid #d2b467;
+		border: 2px solid $color-main-border;
 		border-radius: 15px;
 		background-image: linear-gradient(to top, #dfe9f3 0%, white 100%);
 		box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
@@ -33,7 +33,7 @@
 	&__heading {
 		margin: 0 0 15px;
 		font: normal 1.75rem/1.2 $ff-heading;
-		color: #ce4e35;
+		color: $color-red;
 		text-align: center;
 		text-shadow: 0px 1px 0px rgba(0, 0, 0, 0.75);
 	}
@@ -41,7 +41,7 @@
 	&__subheading {
 		margin: 0;
 		font: normal 1.25rem/1.3 $ff-main-bold;
-		color: #444;
+		color: $color-navy;
 		text-align: center;
 		text-transform: lowercase;
 	}
