--- a/_dev/sass/sections/blog-share.scss
+++ b/_dev/sass/sections/blog-share.scss
@@ -6,7 +6,7 @@
 		margin: 0;
 		padding-bottom: 15px;
 		font: normal 1rem/1.2 $ff-main-bold;
-		color: #333;
+		color: $color-main-p;
 		text-transform: uppercase;
 	}
 
