--- a/_dev/sass/sections/category-card.scss
+++ b/_dev/sass/sections/category-card.scss
@@ -6,13 +6,13 @@
 	padding: 20px;
 	background-image: linear-gradient(to top, #dfe9f3 0%, white 100%);
 	box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
-	border: 2px solid #d2b467;
+	border: 2px solid $color-main-border;
 	border-radius: 15px;
 
 	&__title {
 		margin: 0 0 15px;
 		font: normal 1.75rem/1.2 $ff-heading;
-		color: #333;
+		color: $color-main-p;
 	}
 
 	&__list {
