--- a/_dev/sass/sections/category.scss
+++ b/_dev/sass/sections/category.scss
@@ -18,7 +18,7 @@
 
 		&-inner {
 			padding: 20px 20px;
-			border: 2px solid #d2b467;
+			border: 2px solid $color-main-border;
 			border-radius: 20px;
 			background: #fff;
 		}
