--- a/_dev/sass/sections/homepage-slider.scss
+++ b/_dev/sass/sections/homepage-slider.scss
@@ -6,7 +6,7 @@
 		@include unstyled-list;
 
 		height: 100%;
-    	border: 2px solid #d2b467;
+    	border: 2px solid $color-main-border;
 		border-radius: 10px;
 		overflow: hidden;
 	}
@@ -22,6 +22,7 @@
 		img {
 			display: block;
 			max-width: 100%;
+			width: 100%;
 			height: 100%;
 			object-fit: cover;
 		}
