--- a/_dev/sass/sections/product-options.scss
+++ b/_dev/sass/sections/product-options.scss
@@ -17,7 +17,7 @@
 		display: block;
 		height: 100%;
 		padding: 20px 20px 20px 70px;
-		border: 2px solid #d2b467;
+		border: 2px solid $color-main-border;
 		border-radius: 15px;
 		background: #f2f2f2;
 		box-shadow: 0 2px 6px 0 rgba(0,0,0,0.5);
@@ -26,7 +26,7 @@
 	&__heading {
 		margin: 0 0 10px;
 		font: normal 1.125rem/1.2 $ff-main-bold;
-		color: #333;
+		color: $color-main-p;
 	}
 
 	&__subheading {
