--- a/_dev/sass/sections/subcategory.scss
+++ b/_dev/sass/sections/subcategory.scss
@@ -41,7 +41,7 @@
     	font: normal 1.375rem/1 $ff-heading;
 		color: #f7e2df;
     	text-align: center;
-    	background: #005f27;
+    	background: $color-green-main;
     }
 
     &__filter {
