--- a/_dev/sass/sections/vertical-menu.scss
+++ b/_dev/sass/sections/vertical-menu.scss
@@ -1,6 +1,6 @@
 .vertical-menu {
 
-	border: 2px solid #d2b467;
+	border: 2px solid $color-main-border;
 	border-radius: 15px;
 	background-color: #fff;
 	overflow: hidden;
@@ -11,7 +11,7 @@
 		color: #f7e2df;
 		text-align: center;
 		text-shadow: 0px 2px 6px rgba(0, 0, 0, 0.75);
-		background-color: #005f27;
+		background-color: $color-green-main;
 	}
 
 	&__list {
@@ -34,15 +34,36 @@
 	}
 
 	&__link {
+		position: relative;
 		display: block;
 		padding: 15px 20px;
 		font: normal 1.125rem/1.3 $ff-main-bold;
-		color: #444;
+		color: $color-navy;
 
-		&:hover {
+		&:hover,
+		&--active {
 			color: #000;
 			text-indent: 1px;
 			background: #f4f4f4;
 		}
+
+		&--active {
+
+			cursor: not-allowed;
+
+			&:after {
+				content: "";
+				position: absolute;
+				top: 50%;
+				right: -1px;
+				width: 0;
+				height: 0;
+				border-top: 30px solid transparent;
+				border-right: 15px solid #d2b467;
+				border-bottom: 30px solid transparent;
+				transform: translateY(-50%);
+			}
+		}
+
 	}
 }
