--- a/_dev/templates/category.pug
+++ b/_dev/templates/category.pug
@@ -1,37 +1,49 @@
-include sections/header
+doctype html
+html(lang="ru")
+  head
+    meta(charset="utf-8")
+    meta(http-equiv="X-UA-Compatible", content="IE=edge")
+    meta(name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no")
+    title Rizdvo
+    link(rel="stylesheet" href="css/main.min.css")
+    //- link(rel="stylesheet" href="js/owlcarousel/owl.carousel.min.css")
+    //- link(rel="stylesheet" href="js/owlcarousel/owl.theme.default.min.css")
+  body
 
-main.category
-    .container
-        .main-heading.main-heading--green Елки
-        .category__top
-            .category__top-inner
-                .category__top-left
-                    include sections/block-categories
-                    include sections/advanced-search
-                .category__top-right
-                    .category__cover
-                        img(src="img/category-1.jpg" alt="")
-                    include sections/filtered-page
-                    include sections/subcategory
-                    include sections/product-list
+    include sections/header
 
-    include sections/hits-of-sales
-    .category__description
+    main.category
         .container
-            .main-heading Особенности
-            .category__description-inner
-                h1 5&nbsp;ПРИЧИН КУПИТЬ ИСКУССТВЕННУЮ ЕЛКУ
-                p Новый Год &laquo;на&nbsp;носу&raquo; и&nbsp;все мы&nbsp;стремимся купить красивую новогоднюю елку, чтобы создать в&nbsp;доме настоящую праздничную атмосферу. Но&nbsp;что делать, если хочется праздника, а&nbsp;губить живое деревце, из&nbsp;которого могла&nbsp;бы вырасти настоящая лесная красавица, не&nbsp;поднимается рука? Что делать, если не&nbsp;хочется тратить деньги на&nbsp;покупку елки каждый год? Или&nbsp;&mdash; для Вас проблематично везти объемную елку в&nbsp;общественном транспорте, Вы&nbsp;не&nbsp;любите убирать осыпавшуюся хвою, да&nbsp;к&nbsp;тому&nbsp;же выбрать красивую, симметричную елку также составляет проблему? Интернет-магазин &laquo;Різдво&raquo; предлагает отличное решение всех проблем: искусственная елка станет настоящим новогодним украшением, которое, к&nbsp;тому&nbsp;же, имеет массу преимуществ. Итак, 5&nbsp;преимуществ искусственных ёлок:
+            .main-heading.main-heading--green Елки
+            .category__top
+                .category__top-inner
+                    .category__top-left
+                        include sections/block-categories
+                        include sections/advanced-search
+                    .category__top-right
+                        .category__cover
+                            img(src="img/category-1.jpg" alt="")
+                        include sections/filtered-page
+                        include sections/subcategory
+                        include sections/product-list
 
-                h2 Продажа искусственных елок: в&nbsp;rizdvo.com.ua&nbsp;&mdash; лучшие условия!
-                p Интернет-магазин &laquo;Різдво&raquo; предлагает лучшие условия на&nbsp;покупку красивых, стильных и&nbsp;качественных елок в&nbsp;любом городе Украины: поскольку у&nbsp;нас собственное производство, мы&nbsp;предоставляем все модели по&nbsp;самым низким ценам.
-                p Преимущества наших искусственных елей и&nbsp;сосен:
-                ul
-                    li Все елки оборудованы подставкой;
-                    li Будучи производителем, мы&nbsp;гарантируем качество;
-                    li Мы&nbsp;производим все новогодние елки исключительно из&nbsp;гипоалергенных материалов;
-                    li Весь товар ТМ&nbsp;&laquo;Різдво&raquo; имеет санитарно-эпидемиологическое заключение о&nbsp;безопасности;
-                    li Все наши елки и&nbsp;сосны созданы из&nbsp;пожаробезопасных материалов.
-                p Закажите искусственную елку прямо сейчас и&nbsp;оцените все преимущества нашей продукции!
+        include sections/hits-of-sales
+        .category__description
+            .container
+                .main-heading Особенности
+                .category__description-inner
+                    h1 5&nbsp;ПРИЧИН КУПИТЬ ИСКУССТВЕННУЮ ЕЛКУ
+                    p Новый Год &laquo;на&nbsp;носу&raquo; и&nbsp;все мы&nbsp;стремимся купить красивую новогоднюю елку, чтобы создать в&nbsp;доме настоящую праздничную атмосферу. Но&nbsp;что делать, если хочется праздника, а&nbsp;губить живое деревце, из&nbsp;которого могла&nbsp;бы вырасти настоящая лесная красавица, не&nbsp;поднимается рука? Что делать, если не&nbsp;хочется тратить деньги на&nbsp;покупку елки каждый год? Или&nbsp;&mdash; для Вас проблематично везти объемную елку в&nbsp;общественном транспорте, Вы&nbsp;не&nbsp;любите убирать осыпавшуюся хвою, да&nbsp;к&nbsp;тому&nbsp;же выбрать красивую, симметричную елку также составляет проблему? Интернет-магазин &laquo;Різдво&raquo; предлагает отличное решение всех проблем: искусственная елка станет настоящим новогодним украшением, которое, к&nbsp;тому&nbsp;же, имеет массу преимуществ. Итак, 5&nbsp;преимуществ искусственных ёлок:
 
-include sections/footer
+                    h2 Продажа искусственных елок: в&nbsp;rizdvo.com.ua&nbsp;&mdash; лучшие условия!
+                    p Интернет-магазин &laquo;Різдво&raquo; предлагает лучшие условия на&nbsp;покупку красивых, стильных и&nbsp;качественных елок в&nbsp;любом городе Украины: поскольку у&nbsp;нас собственное производство, мы&nbsp;предоставляем все модели по&nbsp;самым низким ценам.
+                    p Преимущества наших искусственных елей и&nbsp;сосен:
+                    ul
+                        li Все елки оборудованы подставкой;
+                        li Будучи производителем, мы&nbsp;гарантируем качество;
+                        li Мы&nbsp;производим все новогодние елки исключительно из&nbsp;гипоалергенных материалов;
+                        li Весь товар ТМ&nbsp;&laquo;Різдво&raquo; имеет санитарно-эпидемиологическое заключение о&nbsp;безопасности;
+                        li Все наши елки и&nbsp;сосны созданы из&nbsp;пожаробезопасных материалов.
+                    p Закажите искусственную елку прямо сейчас и&nbsp;оцените все преимущества нашей продукции!
+
+    include sections/footer
