--- a/_dev/templates/sections/vertical-menu.pug
+++ b/_dev/templates/sections/vertical-menu.pug
@@ -1,7 +1,10 @@
 .vertical-menu
     .vertical-menu__heading Категории
     ul.vertical-menu__list
-        - var values = ['Литые', 'Голубые', 'Пушистые', 'Маленькие 45-90 см', 'Комнатные 120-180 см', 'Большие 250 - 500 см', 'Эконом класс', 'Стандарт класс', 'Премиум класс'];
+        - var values = ['Оплата и доставка', 'Возврат товара', 'Сотрудничество', 'Гарантия и поддержка', 'Купить в кредит', 'Часто задаваемые вопросы', 'Контакты', 'О магазине', 'Дропшиппинг'];
             each val in values
                 li.vertical-menu__item
-                    a.vertical-menu__link(href="#")= val
+                    if(val == "Оплата и доставка")
+                        a.vertical-menu__link.vertical-menu__link--active(href="#") Оплата и доставка
+                    else
+                        a.vertical-menu__link(href="#")= val
