--- a/_dev/templates/cms.pug
+++ b/_dev/templates/cms.pug
@@ -19,6 +19,8 @@ html(lang="ru")
                     .cms__top-right
                         .cms__inner
                             include cms/delivery-payment
-
+                            include cms/purchase-returns
+                            include cms/partnership
+                            include cms/warranty
 
     include sections/footer
