--- a/_dev/sass/sections/cms.scss
+++ b/_dev/sass/sections/cms.scss
@@ -4,16 +4,31 @@
 
 	&__inner {
 		padding: 20px 20px;
-		border: 2px solid $color-main-border;
+		border: $main_border;
 		border-radius: 20px;
-		background: #fff;
+		background: $base-box-bg;
+
+		img {
+			display: block;
+			max-width: 100%;
+			margin: 0 auto;
+			padding: 15px 0;
+		}
+
+		p {
+			padding-bottom: 15px;
+		}
+
+		li {
+			padding-bottom: 10px;
+		}
+
 	}
 
 	&__heading {
 		margin: 0;
 		padding: 10px 0;
 		font: $cms-heading;
-		color: $color-navy;
 		color: $color-green-light;
 		text-align: center;
 	}
@@ -25,8 +40,4 @@
 		color: $color-red-light;
 	}
 
-	img {
-		display: block;
-		padding: 15px 0;
-	}
 }
