--- a/_dev/sass/sections/product-options.scss
+++ b/_dev/sass/sections/product-options.scss
@@ -10,6 +10,7 @@
 
 	&__item {
 		@include flex-item-row(4);
+		position: relative;
 		padding: 0 10px;
 	}
 
@@ -21,6 +22,13 @@
 		border-radius: 15px;
 		background: #f2f2f2;
 		box-shadow: 0 2px 6px 0 rgba(0,0,0,0.5);
+	}
+
+	.ic {
+		position: absolute;
+		left: 20px;
+		top: 50%;
+		transform: translateY(-50%);
 	}
 
 	&__heading {
